@@ -1,8 +1,9 @@
 1.14 - unreleased
 -------
-- Add enums for the basic consts: SoftwareType, FileAnalysisVerdict, URLAnalysisVerdict, EndpointAnalysisVerdict
+- Add enums for the basic consts: SoftwareType, FileAnalysisVerdict, URLAnalysisVerdict, EndpointAnalysisVerdict.
 - Support getting analyses history (url\file\endpoint) from server.
-- New On-premise version support
+- New On-premise version support.
+- Python 3.11 Support.
 
 1.13
 -------
